--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,18 @@
+
+/* @font-face{
+    font-family: 'Outfit' ;
+    font-display: swap;
+    font-weight: 400 700;
+    src: url('assets/fonts/outfit/Outfit-VariableFont_wght.ttf')
+        format('truetype');
+}
+@font-face {
+    font-family: 'Young Serif';
+    font-display: swap;
+    font-weight: 400;
+    src: url('assets/fonts/outfit/Outfit-VariableFont_wght.ttf') 
+         format('truetype');
+  } */
 :root{
     --White: hsl(0, 0%, 100%);
 
@@ -10,4 +25,76 @@
     
     --Rose-800: hsl(332, 51%, 32%);
     --Rose-50: hsl(330, 100%, 98%);
+
+    --font-family-default-1: 'Young Serif', sans-serif;
+    --font-family-default-2: "Outfit", sans-serif;
+
+    --fw-regular: 400;
+    --fw-bold: 600;
+    --fw-black: 700;
+
+    --main-padding: 2rem;
+
+    --fs-400: 1.125rem;
+    --fs-500: 1.25rem;
+    --fs-600: 1.5rem;
+    --fs-700: 1.75rem;
+    --fs-800: 2rem;
+    --fs-900: 5rem;
+}
+
+*,
+*::after,
+*::before{
+    box-sizing: border-box;
+}
+*{
+    margin: 0;
+}
+img{
+  display: block;
+  max-width: 100%;
+}
+
+h1,
+h2{
+    font-family: var(--font-family-default-1);
+    font-weight: var(--fw-regular);     
+}
+h1{
+    line-height: 1;
+    color: var(--Stone-900);
+}
+h2{
+    color: var(--Brown-800);
+}
+h3{
+    color: var(--Rose-800);
+    padding-bottom: calc(var(--main-padding) * .5) ;
+}
+li{
+    line-height: 1.6;
+}
+li span{
+    font-weight: var(--fw-bold);
+}
+body{
+    font-family: var(--font-family-default-2);
+}
+.container{
+    padding: calc(var(--main-padding) * 1.5) var(--main-padding);
+    color: var(--Stone-600);
+}
+p{
+    padding: var(--main-padding) 0;
+    line-height: 1.6;
+}
+.preparetion-time{
+    background-color: var(--Rose-50);
+    padding: calc(var(--main-padding) *.75) ;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
 }
